[package]
name = "gdrive-search"
version = "0.1.0"
description = "A TUI to quickly find files in your Google Drive"
homepage = "https://github.com/jalada/gdrive-search"
repository = "https://github.com/jalada/gdrive-search"
readme = "README.md"
license = "GPL-3.0"
keywords = ["google", "cli", "search", "tui", "drive"]
categories = ["command-line-utilities", "filesystem"]
edition = "2018"

[dependencies]
google-drive3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
tokio = { version = "1", features = ["full"] }
chrono = "*"
async-recursion = "*"
skim = "*"
webbrowser = "*"
dirs = "*"
